OC/lb3/task7.log
Started work: Сб 06 апр 2024 20:11:15 MSK
--------20:11:17-------- $ clear
[H[2J[3J--------21:59:06-------- $ cd ../task8
--------21:59:15-------- $ cd ..
--------21:59:16-------- $ ls
lb1
lb2
lb3
--------21:59:22-------- $ cd lb3
--------21:59:26-------- $ cd task8
--------22:00:59-------- $ gcc task8.c
task8.c: In function ‘main’:
task8.c:7:5: error: unknown type name ‘сhar’
    7 |     сhar *path = "/bin/ls";
      |     ^~~~
task8.c:7:18: warning: initialization of ‘int *’ from incompatible pointer type ‘char *’ [-Wincompatible-pointer-types]
    7 |     сhar *path = "/bin/ls";
      |                  ^~~~~~~~~
task8.c:11:13: error: expected ‘)’ before ‘pid’
   11 |     if ((int pid = fork()) == 0)
      |         ~   ^~~~
      |             )
task8.c:11:28: error: expected expression before ‘==’ token
   11 |     if ((int pid = fork()) == 0)
      |                            ^~
task8.c:22:57: error: ‘envp’ undeclared (first use in this function); did you mean ‘env’?
   22 |             execle("/bin/ls", "ls", "-l", (char *)NULL, envp);
      |                                                         ^~~~
      |                                                         env
task8.c:22:57: note: each undeclared identifier is reported only once for each function it appears in
task8.c:31:13: warning: implicit declaration of function ‘execvpe’; did you mean ‘execvp’? [-Wimplicit-function-declaration]
   31 |             execvpe("ls", args, (char *)NULL, env);
      |             ^~~~~~~
      |             execvp
--------22:02:07-------- $ ./myscript.sh task7.log
./myscript.sh: строка 45: ./myscript.sh: Нет такого файла или каталога
--------22:02:23-------- $ ./myscript.sh task7.log
./myscript.sh: строка 45: ./myscript.sh: Нет такого файла или каталога
--------22:21:00-------- $ ука
./myscript.sh: строка 45: ука: команда не найдена
--------22:21:38-------- $ export PATH=$PATH:/home/egor/OC/lb3/task8
--------22:21:38-------- $ 
--------22:21:43-------- $ echo $PATH
/home/egor/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
--------22:22:39-------- $ echp $PATH
./myscript.sh: строка 45: echp: команда не найдена
--------22:22:47-------- $ echo $PATH
/home/egor/.local/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin:/usr/games:/usr/local/games:/snap/bin
Work is finished: Сб 06 апр 2024 22:23:00 MSK
